--- a/Starter_Code/climate_analysis_starter.ipynb
+++ b/Starter_Code/climate_analysis_starter.ipynb
@@ -736,10 +736,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sel = [\n",
-    "   measurement.station,\n",
-    "    measurement.tobs\n",
-    "]\n",
+    "\n",
     "\n",
     "temps_12mo = session.query(measurement.tobs).filter(measurement.station == 'USC00519281').\\\n",
     "filter(measurement.date >= last12mo).all()"
@@ -747,489 +744,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(77.0,),\n",
-       " (77.0,),\n",
-       " (80.0,),\n",
-       " (80.0,),\n",
-       " (75.0,),\n",
-       " (73.0,),\n",
-       " (78.0,),\n",
-       " (77.0,),\n",
-       " (78.0,),\n",
-       " (80.0,),\n",
-       " (80.0,),\n",
-       " (78.0,),\n",
-       " (78.0,),\n",
-       " (78.0,),\n",
-       " (73.0,),\n",
-       " (74.0,),\n",
-       " (80.0,),\n",
-       " (79.0,),\n",
-       " (77.0,),\n",
-       " (80.0,),\n",
-       " (76.0,),\n",
-       " (79.0,),\n",
-       " (75.0,),\n",
-       " (79.0,),\n",
-       " (78.0,),\n",
-       " (79.0,),\n",
-       " (78.0,),\n",
-       " (78.0,),\n",
-       " (76.0,),\n",
-       " (74.0,),\n",
-       " (77.0,),\n",
-       " (78.0,),\n",
-       " (79.0,),\n",
-       " (79.0,),\n",
-       " (77.0,),\n",
-       " (80.0,),\n",
-       " (78.0,),\n",
-       " (78.0,),\n",
-       " (78.0,),\n",
-       " (77.0,),\n",
-       " (79.0,),\n",
-       " (79.0,),\n",
-       " (79.0,),\n",
-       " (79.0,),\n",
-       " (75.0,),\n",
-       " (76.0,),\n",
-       " (73.0,),\n",
-       " (72.0,),\n",
-       " (71.0,),\n",
-       " (77.0,),\n",
-       " (79.0,),\n",
-       " (78.0,),\n",
-       " (79.0,),\n",
-       " (77.0,),\n",
-       " (79.0,),\n",
-       " (77.0,),\n",
-       " (78.0,),\n",
-       " (78.0,),\n",
-       " (78.0,),\n",
-       " (78.0,),\n",
-       " (77.0,),\n",
-       " (74.0,),\n",
-       " (75.0,),\n",
-       " (76.0,),\n",
-       " (73.0,),\n",
-       " (76.0,),\n",
-       " (74.0,),\n",
-       " (77.0,),\n",
-       " (76.0,),\n",
-       " (76.0,),\n",
-       " (74.0,),\n",
-       " (75.0,),\n",
-       " (75.0,),\n",
-       " (75.0,),\n",
-       " (75.0,),\n",
-       " (71.0,),\n",
-       " (63.0,),\n",
-       " (70.0,),\n",
-       " (68.0,),\n",
-       " (67.0,),\n",
-       " (77.0,),\n",
-       " (74.0,),\n",
-       " (77.0,),\n",
-       " (76.0,),\n",
-       " (76.0,),\n",
-       " (75.0,),\n",
-       " (76.0,),\n",
-       " (75.0,),\n",
-       " (73.0,),\n",
-       " (75.0,),\n",
-       " (73.0,),\n",
-       " (75.0,),\n",
-       " (74.0,),\n",
-       " (75.0,),\n",
-       " (74.0,),\n",
-       " (75.0,),\n",
-       " (73.0,),\n",
-       " (75.0,),\n",
-       " (73.0,),\n",
-       " (73.0,),\n",
-       " (74.0,),\n",
-       " (70.0,),\n",
-       " (72.0,),\n",
-       " (70.0,),\n",
-       " (67.0,),\n",
-       " (67.0,),\n",
-       " (69.0,),\n",
-       " (70.0,),\n",
-       " (68.0,),\n",
-       " (69.0,),\n",
-       " (69.0,),\n",
-       " (66.0,),\n",
-       " (65.0,),\n",
-       " (68.0,),\n",
-       " (62.0,),\n",
-       " (75.0,),\n",
-       " (70.0,),\n",
-       " (69.0,),\n",
-       " (76.0,),\n",
-       " (76.0,),\n",
-       " (74.0,),\n",
-       " (73.0,),\n",
-       " (71.0,),\n",
-       " (74.0,),\n",
-       " (74.0,),\n",
-       " (72.0,),\n",
-       " (71.0,),\n",
-       " (72.0,),\n",
-       " (74.0,),\n",
-       " (69.0,),\n",
-       " (67.0,),\n",
-       " (72.0,),\n",
-       " (70.0,),\n",
-       " (64.0,),\n",
-       " (63.0,),\n",
-       " (63.0,),\n",
-       " (62.0,),\n",
-       " (70.0,),\n",
-       " (70.0,),\n",
-       " (62.0,),\n",
-       " (62.0,),\n",
-       " (63.0,),\n",
-       " (65.0,),\n",
-       " (69.0,),\n",
-       " (77.0,),\n",
-       " (70.0,),\n",
-       " (74.0,),\n",
-       " (69.0,),\n",
-       " (72.0,),\n",
-       " (71.0,),\n",
-       " (69.0,),\n",
-       " (71.0,),\n",
-       " (71.0,),\n",
-       " (72.0,),\n",
-       " (72.0,),\n",
-       " (69.0,),\n",
-       " (70.0,),\n",
-       " (66.0,),\n",
-       " (65.0,),\n",
-       " (69.0,),\n",
-       " (68.0,),\n",
-       " (68.0,),\n",
-       " (68.0,),\n",
-       " (59.0,),\n",
-       " (60.0,),\n",
-       " (70.0,),\n",
-       " (73.0,),\n",
-       " (75.0,),\n",
-       " (64.0,),\n",
-       " (59.0,),\n",
-       " (59.0,),\n",
-       " (62.0,),\n",
-       " (68.0,),\n",
-       " (70.0,),\n",
-       " (73.0,),\n",
-       " (79.0,),\n",
-       " (75.0,),\n",
-       " (65.0,),\n",
-       " (70.0,),\n",
-       " (74.0,),\n",
-       " (70.0,),\n",
-       " (70.0,),\n",
-       " (71.0,),\n",
-       " (71.0,),\n",
-       " (71.0,),\n",
-       " (69.0,),\n",
-       " (61.0,),\n",
-       " (67.0,),\n",
-       " (65.0,),\n",
-       " (72.0,),\n",
-       " (71.0,),\n",
-       " (73.0,),\n",
-       " (72.0,),\n",
-       " (77.0,),\n",
-       " (73.0,),\n",
-       " (67.0,),\n",
-       " (62.0,),\n",
-       " (64.0,),\n",
-       " (67.0,),\n",
-       " (66.0,),\n",
-       " (81.0,),\n",
-       " (69.0,),\n",
-       " (66.0,),\n",
-       " (67.0,),\n",
-       " (69.0,),\n",
-       " (66.0,),\n",
-       " (68.0,),\n",
-       " (65.0,),\n",
-       " (74.0,),\n",
-       " (69.0,),\n",
-       " (72.0,),\n",
-       " (73.0,),\n",
-       " (72.0,),\n",
-       " (71.0,),\n",
-       " (76.0,),\n",
-       " (77.0,),\n",
-       " (76.0,),\n",
-       " (74.0,),\n",
-       " (68.0,),\n",
-       " (73.0,),\n",
-       " (71.0,),\n",
-       " (74.0,),\n",
-       " (75.0,),\n",
-       " (70.0,),\n",
-       " (67.0,),\n",
-       " (71.0,),\n",
-       " (67.0,),\n",
-       " (74.0,),\n",
-       " (77.0,),\n",
-       " (78.0,),\n",
-       " (67.0,),\n",
-       " (70.0,),\n",
-       " (69.0,),\n",
-       " (69.0,),\n",
-       " (74.0,),\n",
-       " (78.0,),\n",
-       " (71.0,),\n",
-       " (67.0,),\n",
-       " (68.0,),\n",
-       " (67.0,),\n",
-       " (76.0,),\n",
-       " (69.0,),\n",
-       " (72.0,),\n",
-       " (76.0,),\n",
-       " (68.0,),\n",
-       " (72.0,),\n",
-       " (74.0,),\n",
-       " (70.0,),\n",
-       " (67.0,),\n",
-       " (72.0,),\n",
-       " (60.0,),\n",
-       " (65.0,),\n",
-       " (75.0,),\n",
-       " (70.0,),\n",
-       " (75.0,),\n",
-       " (70.0,),\n",
-       " (79.0,),\n",
-       " (75.0,),\n",
-       " (70.0,),\n",
-       " (67.0,),\n",
-       " (74.0,),\n",
-       " (70.0,),\n",
-       " (75.0,),\n",
-       " (76.0,),\n",
-       " (77.0,),\n",
-       " (74.0,),\n",
-       " (74.0,),\n",
-       " (74.0,),\n",
-       " (69.0,),\n",
-       " (68.0,),\n",
-       " (76.0,),\n",
-       " (74.0,),\n",
-       " (71.0,),\n",
-       " (71.0,),\n",
-       " (74.0,),\n",
-       " (74.0,),\n",
-       " (74.0,),\n",
-       " (74.0,),\n",
-       " (80.0,),\n",
-       " (74.0,),\n",
-       " (72.0,),\n",
-       " (75.0,),\n",
-       " (80.0,),\n",
-       " (76.0,),\n",
-       " (76.0,),\n",
-       " (77.0,),\n",
-       " (75.0,),\n",
-       " (75.0,),\n",
-       " (75.0,),\n",
-       " (75.0,),\n",
-       " (72.0,),\n",
-       " (74.0,),\n",
-       " (74.0,),\n",
-       " (74.0,),\n",
-       " (76.0,),\n",
-       " (74.0,),\n",
-       " (75.0,),\n",
-       " (73.0,),\n",
-       " (79.0,),\n",
-       " (75.0,),\n",
-       " (72.0,),\n",
-       " (72.0,),\n",
-       " (74.0,),\n",
-       " (72.0,),\n",
-       " (72.0,),\n",
-       " (77.0,),\n",
-       " (71.0,),\n",
-       " (73.0,),\n",
-       " (76.0,),\n",
-       " (77.0,),\n",
-       " (76.0,),\n",
-       " (76.0,),\n",
-       " (79.0,),\n",
-       " (81.0,),\n",
-       " (76.0,),\n",
-       " (78.0,),\n",
-       " (77.0,),\n",
-       " (74.0,),\n",
-       " (75.0,),\n",
-       " (78.0,),\n",
-       " (78.0,),\n",
-       " (69.0,),\n",
-       " (72.0,),\n",
-       " (74.0,),\n",
-       " (74.0,),\n",
-       " (76.0,),\n",
-       " (80.0,),\n",
-       " (80.0,),\n",
-       " (76.0,),\n",
-       " (76.0,),\n",
-       " (76.0,),\n",
-       " (77.0,),\n",
-       " (77.0,),\n",
-       " (77.0,),\n",
-       " (82.0,),\n",
-       " (75.0,),\n",
-       " (77.0,),\n",
-       " (75.0,),\n",
-       " (76.0,),\n",
-       " (81.0,),\n",
-       " (82.0,),\n",
-       " (81.0,),\n",
-       " (76.0,),\n",
-       " (77.0,),\n",
-       " (82.0,),\n",
-       " (83.0,),\n",
-       " (77.0,),\n",
-       " (77.0,),\n",
-       " (77.0,),\n",
-       " (76.0,),\n",
-       " (76.0,),\n",
-       " (79.0,)]"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "temps_12mo"
+    "#temps_12mo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 62,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>tobs</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>77.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>77.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>80.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>80.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>75.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>347</th>\n",
-       "      <td>77.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>348</th>\n",
-       "      <td>77.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>349</th>\n",
-       "      <td>76.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>350</th>\n",
-       "      <td>76.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>351</th>\n",
-       "      <td>79.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>352 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     tobs\n",
-       "0    77.0\n",
-       "1    77.0\n",
-       "2    80.0\n",
-       "3    80.0\n",
-       "4    75.0\n",
-       "..    ...\n",
-       "347  77.0\n",
-       "348  77.0\n",
-       "349  76.0\n",
-       "350  76.0\n",
-       "351  79.0\n",
-       "\n",
-       "[352 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.DataFrame(temps_12mo)\n",
-    "df.set_index('tobs')\n",
-    "df.sort_values(by='tobs',ascending=True)\n",
-    "\n",
-    "df"
+    "#df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +774,7 @@
        "Text(0.5, 0, 'Temperature')"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     },
